fidoconfig 0.10
---------------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Fri Jun 30 23:25:08 NOVST 2000
max (patch from Pavel Gulchouk):
* `cmd` & [envvar] parsing

----- cvs ci ------
Tue Jun 27 22:54:18 NOVST 2000
max:
* parsePath() optimization

----- cvs ci ------
Sat Jun 24 19:44:32 NOVST 2000
max:
* fixed firectory checking when parsing auto(area|file)createfile
* fixed dublicated file parsing

----- cvs ci ------
Thu Jun 22 15:40:00 MSK 2000
Nestyurkin Nikolay:
* changed Watcom makefiles to use makefile.inc
* minor changes in makefile.inc

----- cvs ci ------
Wed Jun 21 17:50:00 MSK 2000
Nestyurkin Nikolay:
* removed $(FECFG2FCONF)$(EXE) from makefile.inc

----- cvs ci ------
Wed Jun 21 13:44:01 NOVST 2000
max:
* carbonOut token

----- cvs ci ------
Wed Jun 21 01:21:00 MSK 2000
Nestyurkin Nikolay:
* added $(FECFG2FCONF)$(EXE) to makefile.inc

----- cvs ci ------
Tue Jun 20 23:26:07 MSK 2000
Nestyurkin Nikolay:
* removed fecfg2fc.exe compiling under watcom (same as fecfg2fconf.exe)
* added dumpfcfg.exe & fconf2fidogate.exe to watcom makefiles
* fixed dumping of ExecOnFile

----- cvs ci ------
Sun Jun 18 13:35:07 NOVST 2000
max:
* tearline, origin tokens

----- cvs ci ------
Tue Jun  6 19:39:31 NOVST 2000
max:
* smalloc(), srealloc(), scalloc()

----- cvs ci ------
Mon Jun 05 12:23:00 SAMST 2000
Georgi:
* added new token delNotRecievedTIC (in link section).
  For htick - if file not recieved, then remove TIC
* added new filearea option - noreplace

----- cvs ci ------
Mon Jun  5 14:27:35 NOVST 2000
max:
* fixed carbonExtern parsing

----- cvs ci ------
Sun Jun  4 14:19:57 NOVST 2000
max:
* readConfig(void) changed to readConfig(char *cfgFile)
* tparser support command via cmdline (run tparser --help)
* carbonAddr token
* route flavour nopack ...
* addToSeen token

----- cvs ci ------
Sat Jun  3 21:57:51 NOVST 2000
max:
* fixed my yesterday bug in fgetsUntil0

----- cvs ci ------
Thu Jun  2 12:04:42 NOVST 2000
max: